--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HoustonTemp</string>
+    <string name="button_text">Click me!</string>
+    <string name="houston_label">Houston Temperature:</string>
 </resources>
